AG-8132 - Fix automated example link icon Safari bug

--- a/grid-packages/ag-grid-docs/documentation/src/pages/components/home-page-demos/AutomatedRowGrouping.module.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/pages/components/home-page-demos/AutomatedRowGrouping.module.scss
@@ -264,6 +264,7 @@ $splash-transform: skew(-20deg) translateX(5%);
     :global(.icon) {
         position: absolute;
         bottom: 0;
+        right: -0.33em;
         transition: transform ds.$default-transition-timing;
     }
 }
